src/ProGPU.Backend.Native/NativeMilMethods.cs


    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_set_visual_cache_bounds")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeMilStatus SetVisualCacheBounds(
        nint channel,
        uint handle,
        double x,
        double y,
        double width,
        double height);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_set_viewport3d_scene")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeMilStatus SetViewport3DScene(
        nint channel,
        uint handle,
        NativeSceneCamera3D* camera,
        NativeImageRect viewport,
        NativeSceneMesh3D* meshes,
        nuint meshCount,
        NativeSceneMesh3DVertex* vertices,
        nuint vertexCount,
        uint* indices,
        nuint indexCount);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_set_viewport3d_scene_lights")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeMilStatus SetViewport3DSceneLights(
        nint channel,
        uint handle,
        NativeSceneCamera3D* camera,
        NativeImageRect viewport,
        NativeSceneMesh3D* meshes,
        nuint meshCount,
        NativeSceneMesh3DVertex* vertices,
        nuint vertexCount,
        uint* indices,
        nuint indexCount,
        NativeSceneLight3D* lights,
        nuint lightCount);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_set_viewport3d_scene_materials")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeMilStatus SetViewport3DSceneMaterials(
        nint channel,
        uint handle,
        NativeSceneCamera3D* camera,
        NativeImageRect viewport,
        NativeSceneMesh3D* meshes,
        nuint meshCount,
        NativeSceneMesh3DVertex* vertices,
        nuint vertexCount,
        uint* indices,
        nuint indexCount,
        NativeSceneLight3D* lights,
        nuint lightCount,
        NativeSceneBrush* materials,
        nuint materialCount,
        NativeSceneGradientStop* gradientStops,
        nuint gradientStopCount);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_set_glyph_run_font_sfnt")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeMilStatus SetGlyphRunFontSfnt(
        nint channel,
        uint handle,
        uint faceIndex,
        uint styleSimulations,
        void* fontData,
        nuint fontSize);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_get_resource_count")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial nuint GetResourceCount(nint channel);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_has_resource")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial byte HasResource(nint channel, uint handle);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_get_resource_type")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial uint GetResourceType(nint channel, uint handle);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_get_resource_generation")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial ulong GetResourceGeneration(nint channel, uint handle);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_get_visual")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial byte GetVisual(
        nint channel,
        uint handle,
        NativeMilMethods.VisualSnapshot* snapshot);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_get_visual_child")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial byte GetVisualChild(
        nint channel,
        uint handle,
        uint index,
        uint* childHandle);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_get_target")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial byte GetTarget(
        nint channel,
        uint handle,
        NativeMilMethods.TargetSnapshot* snapshot);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_build_scene")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeMilStatus BuildScene(
        nint channel,
        uint targetHandle,
        ulong sceneId,
        ulong generation,
        void* destination,
        nuint destinationSize,
        nuint* bytesWritten,
        NativeMilMethods.SceneMetrics* metrics);

    [LibraryImport(NativeDawnMethods.LibraryName, EntryPoint = "progpu_native_mil_channel_build_scene_with_request")]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    internal static partial NativeMilStatus BuildSceneWithRequest(
        nint channel,
        NativeMilMethods.SceneBuildRequest* request,
        void* destination,
        nuint destinationSize,
        nuint* bytesWritten,
        NativeMilMethods.SceneMetrics* metrics,
        NativeMilMethods.SceneBuildResult* buildResult);
}
